--- a/components/backend-tests-go-pozaqchi/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-pozaqchi/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-pozaqchi
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-tssc/task-runner:1.8
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-pozaqchi:e8cd2e3d7cef27bb4ae341c6b8934a62ae66b80a@sha256:515b67a7167c1c2f533e13b18bdc86106fc8df49cdf2a6daba32cbcfb2239b22
+          name: container-image
